--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "vite": "^7.3.0"
   },
   "dependencies": {
-    "@mui/material": "^5.16.4",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.16.4",
+    "@mui/material": "^5.16.4",
+    "@mui/x-date-pickers": "^8.23.0",
+    "date-fns": "^4.1.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "react-router-dom": "^6.30.2"
+    "react-router-dom": "^6.30.2",
+    "recharts": "^2.15.4"
   }
 }
